--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,11 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
+
 # expo router
 expo-env.d.ts
 
-
+.env
 
 ios
 android
@@ -22,3 +23,5 @@ android
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+google_credentials.json
