--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "start": "expo start",
+    "start:wsl": "export $(grep -v '^#' .env | xargs) && REACT_NATIVE_PACKAGER_HOSTNAME=$WSL_IP_ADDRESS expo start",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
     "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@bottom-tabs/react-navigation": "^0.8.9",
     "@expo/react-native-action-sheet": "^4.1.1",
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4.6.4",
@@ -24,11 +26,13 @@
     "@rn-primitives/slot": "^1.1.0",
     "@roninoss/icons": "^0.0.4",
     "@shopify/flash-list": "1.7.3",
+    "@tanstack/react-query": "^5.67.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^52.0.37",
+    "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.7",
-    "expo-dev-client": "~5.0.4",
+    "expo-dev-client": "~5.0.12",
     "expo-dev-launcher": "^5.0.17",
     "expo-linking": "~7.0.5",
     "expo-navigation-bar": "~4.0.8",
@@ -41,12 +45,14 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-bottom-tabs": "^0.8.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-uitextview": "^1.1.4",
+    "react-native-vision-camera": "^4.6.4",
     "react-native-web": "~0.19.10",
     "tailwind-merge": "^2.2.1",
     "zustand": "^4.5.1"
