feat: changing project key

--- a/app.json
+++ b/app.json
@@ -62,8 +62,9 @@
     },
     "extra": {
       "eas": {
-        "projectId": "af295f2f-46a0-4f2d-849e-e2ec84139b7b"
+        "projectId": "5ae7d3b3-da92-4e5a-8e9b-81271dfafd93"
       }
-    }
+    },
+    "owner": "projetointegrador3"
   }
 }
