--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   },
   "dependencies": {
     "@bottom-tabs/react-navigation": "^0.8.9",
+    "@clerk/clerk-expo": "^2.8.5",
+    "@clerk/types": "^4.48.0",
     "@expo/react-native-action-sheet": "^4.1.1",
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4.6.4",
+    "@hookform/resolvers": "^4.1.3",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/slider": "4.5.5",
     "@react-native-picker/picker": "2.9.0",
@@ -27,6 +30,7 @@
     "@roninoss/icons": "^0.0.4",
     "@shopify/flash-list": "1.7.3",
     "@tanstack/react-query": "^5.67.1",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^52.0.37",
@@ -37,6 +41,7 @@
     "expo-linking": "~7.0.5",
     "expo-navigation-bar": "~4.0.8",
     "expo-router": "~4.0.6",
+    "expo-secure-store": "^14.0.1",
     "expo-status-bar": "~2.0.1",
     "expo-store-review": "~8.0.1",
     "expo-system-ui": "~4.0.8",
@@ -44,6 +49,7 @@
     "nativewind": "latest",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
     "react-native-bottom-tabs": "^0.8.9",
     "react-native-gesture-handler": "~2.20.2",
@@ -55,6 +61,7 @@
     "react-native-vision-camera": "^4.6.4",
     "react-native-web": "~0.19.10",
     "tailwind-merge": "^2.2.1",
+    "zod": "^3.24.2",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
